refactor(integration): refactor pom and add docs, display names for tests