@@ -8,6 +8,7 @@ import com.ecom.monolith.model.*;
 import com.ecom.monolith.repositories.CartItemRepository;
 import com.ecom.monolith.repositories.ProductRepository;
 import com.ecom.monolith.repositories.UsersRepository;
+import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.ArgumentCaptor;
@@ -22,6 +23,10 @@ import java.math.BigDecimal;
 import java.util.List;
 import java.util.Optional;
 
+/**
+ * Unit tests for the CartItemServiceImpl class.
+ * This class verifies the service methods for managing cart items.
+ */
 @ExtendWith(MockitoExtension.class)
 public class CartItemServiceImplTest {
 
@@ -43,65 +48,70 @@ public class CartItemServiceImplTest {
     private static final Long id = 1L;
 
     @Test
-    void addCartItem_ProductNotFound(){
-        CartRequest cartRequest = createCartRequest(String.valueOf(id),5);
+    @DisplayName("Verify addCartItem throws exception when product is not found")
+    void addCartItem_ProductNotFound() {
+        CartRequest cartRequest = createCartRequest(String.valueOf(id), 5);
         when(productRepository.findById(id)).thenReturn(Optional.empty());
 
-        assertThatThrownBy(()-> cartItemService.addCartItem(String.valueOf(id),cartRequest))
+        assertThatThrownBy(() -> cartItemService.addCartItem(String.valueOf(id), cartRequest))
                 .isInstanceOf(ResourceNotFound.class)
-                .hasMessageContaining("Product not found with id: "+ id);
+                .hasMessageContaining("Product not found with id: " + id);
 
         verify(productRepository).findById(id);
         verifyNoMoreInteractions(productRepository);
-        verifyNoInteractions(usersRepository,cartItemRepository);
+        verifyNoInteractions(usersRepository, cartItemRepository);
     }
 
     @Test
-    void addCartItem_ProductExist_LowStock(){
-        CartRequest cartRequest = createCartRequest(String.valueOf(id),15);
-        Product product1 = product(1L, "iphone 15","iphone 15",BigDecimal.valueOf(1300),true,10);
+    @DisplayName("Verify addCartItem returns false when product stock is insufficient")
+    void addCartItem_ProductExist_LowStock() {
+        CartRequest cartRequest = createCartRequest(String.valueOf(id), 15);
+        Product product1 = product(1L, "iphone 15", "iphone 15", BigDecimal.valueOf(1300), true, 10);
         when(productRepository.findById(id)).thenReturn(Optional.of(product1));
 
-        assertThat(cartItemService.addCartItem(String.valueOf(id),cartRequest)).isFalse();
+        assertThat(cartItemService.addCartItem(String.valueOf(id), cartRequest)).isFalse();
 
         verify(productRepository).findById(id);
         verifyNoMoreInteractions(productRepository);
-        verifyNoInteractions(usersRepository,cartItemRepository);
+        verifyNoInteractions(usersRepository, cartItemRepository);
     }
 
     @Test
-    void addCartItem_ProductExist_UserNotFound(){
-        CartRequest cartRequest = createCartRequest(String.valueOf(id),15);
-        Product product1 = product(1L, "iphone 15","iphone 15",BigDecimal.valueOf(1300),true,20);
+    @DisplayName("Verify addCartItem throws exception when user is not found")
+    void addCartItem_ProductExist_UserNotFound() {
+        CartRequest cartRequest = createCartRequest(String.valueOf(id), 15);
+        Product product1 = product(1L, "iphone 15", "iphone 15", BigDecimal.valueOf(1300), true, 20);
         when(productRepository.findById(id)).thenReturn(Optional.of(product1));
         when(usersRepository.findById(id)).thenReturn(Optional.empty());
-        assertThatThrownBy(()-> cartItemService.addCartItem(String.valueOf(id),cartRequest))
+
+        assertThatThrownBy(() -> cartItemService.addCartItem(String.valueOf(id), cartRequest))
                 .isInstanceOf(ResourceNotFound.class)
                 .hasMessageContaining("User does not exist with id: " + id);
+
         verify(productRepository).findById(id);
         verify(usersRepository).findById(id);
-        verifyNoMoreInteractions(productRepository,usersRepository);
+        verifyNoMoreInteractions(productRepository, usersRepository);
         verifyNoInteractions(cartItemRepository);
     }
 
     @Test
-    void addCartItem_ProductAndUserExist_ExistingCart(){
-        CartRequest cartRequest = createCartRequest(String.valueOf(id),15);
-        Product product1 = product(1L, "iphone 15","iphone 15",BigDecimal.valueOf(1300),true,20);
+    @DisplayName("Verify addCartItem updates existing cart item when product and user exist")
+    void addCartItem_ProductAndUserExist_ExistingCart() {
+        CartRequest cartRequest = createCartRequest(String.valueOf(id), 15);
+        Product product1 = product(1L, "iphone 15", "iphone 15", BigDecimal.valueOf(1300), true, 20);
         Users user1 = createUser(
                 id, "Jane", "Smith", "jane@example.com", "1234567890", UserRole.CUSTOMER,
                 createAddress(10L, "221B Baker St", "London", "Greater London", "UK", "NW1")
         );
-        CartItem cartItem1 = createCartItem(id,user1,product1,5, BigDecimal.valueOf(6500));
+        CartItem cartItem1 = createCartItem(id, user1, product1, 5, BigDecimal.valueOf(6500));
         when(productRepository.findById(id)).thenReturn(Optional.of(product1));
         when(usersRepository.findById(id)).thenReturn(Optional.of(user1));
-        when(cartItemRepository.findByUsersAndProduct(user1,product1)).thenReturn(Optional.of(cartItem1));
+        when(cartItemRepository.findByUsersAndProduct(user1, product1)).thenReturn(Optional.of(cartItem1));
         when(cartItemRepository.save(any(CartItem.class))).thenAnswer(
                 invocation -> invocation.getArgument(0, CartItem.class)
         );
 
-
-        Boolean response = cartItemService.addCartItem(String.valueOf(id),cartRequest);
+        Boolean response = cartItemService.addCartItem(String.valueOf(id), cartRequest);
 
         assertThat(response).isTrue();
 
@@ -114,28 +124,28 @@ public class CartItemServiceImplTest {
 
         verify(productRepository).findById(id);
         verify(usersRepository).findById(id);
-        verify(cartItemRepository).findByUsersAndProduct(user1,product1);
+        verify(cartItemRepository).findByUsersAndProduct(user1, product1);
         verify(cartItemRepository).save(any(CartItem.class));
-        verifyNoMoreInteractions(productRepository,usersRepository,cartItemRepository);
+        verifyNoMoreInteractions(productRepository, usersRepository, cartItemRepository);
     }
 
     @Test
-    void addCartItem_ProductAndUserExist_NewCart(){
-        CartRequest cartRequest = createCartRequest(String.valueOf(id),15);
-        Product product1 = product(1L, "iphone 15","iphone 15",BigDecimal.valueOf(1300),true,20);
+    @DisplayName("Verify addCartItem creates a new cart item when product and user exist")
+    void addCartItem_ProductAndUserExist_NewCart() {
+        CartRequest cartRequest = createCartRequest(String.valueOf(id), 15);
+        Product product1 = product(1L, "iphone 15", "iphone 15", BigDecimal.valueOf(1300), true, 20);
         Users user1 = createUser(
                 id, "Jane", "Smith", "jane@example.com", "1234567890", UserRole.CUSTOMER,
                 createAddress(10L, "221B Baker St", "London", "Greater London", "UK", "NW1")
         );
         when(productRepository.findById(id)).thenReturn(Optional.of(product1));
         when(usersRepository.findById(id)).thenReturn(Optional.of(user1));
-        when(cartItemRepository.findByUsersAndProduct(user1,product1)).thenReturn(Optional.empty());
+        when(cartItemRepository.findByUsersAndProduct(user1, product1)).thenReturn(Optional.empty());
         when(cartItemRepository.save(any(CartItem.class))).thenAnswer(
                 invocation -> invocation.getArgument(0, CartItem.class)
         );
 
-
-        Boolean response = cartItemService.addCartItem(String.valueOf(id),cartRequest);
+        Boolean response = cartItemService.addCartItem(String.valueOf(id), cartRequest);
 
         assertThat(response).isTrue();
 
@@ -148,119 +158,129 @@ public class CartItemServiceImplTest {
 
         verify(productRepository).findById(id);
         verify(usersRepository).findById(id);
-        verify(cartItemRepository).findByUsersAndProduct(user1,product1);
+        verify(cartItemRepository).findByUsersAndProduct(user1, product1);
         verify(cartItemRepository).save(any(CartItem.class));
-        verifyNoMoreInteractions(productRepository,usersRepository,cartItemRepository);
+        verifyNoMoreInteractions(productRepository, usersRepository, cartItemRepository);
     }
 
     @Test
-    void removeItem_ProductNotFound(){
+    @DisplayName("Verify removeItem throws exception when product is not found")
+    void removeItem_ProductNotFound() {
         when(productRepository.findById(id)).thenReturn(Optional.empty());
 
-        assertThatThrownBy(()-> cartItemService.removeItem(String.valueOf(id),id))
+        assertThatThrownBy(() -> cartItemService.removeItem(String.valueOf(id), id))
                 .isInstanceOf(ResourceNotFound.class)
-                .hasMessageContaining("Product not found with id: "+ id);
+                .hasMessageContaining("Product not found with id: " + id);
 
         verify(productRepository).findById(id);
         verifyNoMoreInteractions(productRepository);
-        verifyNoInteractions(usersRepository,cartItemRepository);
+        verifyNoInteractions(usersRepository, cartItemRepository);
     }
 
     @Test
-    void removeItem_UserNotFound(){
-        Product product1 = product(1L, "iphone 15","iphone 15",BigDecimal.valueOf(1300),true,20);
+    @DisplayName("Verify removeItem throws exception when user is not found")
+    void removeItem_UserNotFound() {
+        Product product1 = product(1L, "iphone 15", "iphone 15", BigDecimal.valueOf(1300), true, 20);
         when(productRepository.findById(id)).thenReturn(Optional.of(product1));
         when(usersRepository.findById(id)).thenReturn(Optional.empty());
-        assertThatThrownBy(()-> cartItemService.removeItem(String.valueOf(id),id))
+
+        assertThatThrownBy(() -> cartItemService.removeItem(String.valueOf(id), id))
                 .isInstanceOf(ResourceNotFound.class)
                 .hasMessageContaining("User does not exist with id: " + id);
 
         verify(productRepository).findById(id);
         verify(usersRepository).findById(id);
-        verifyNoMoreInteractions(productRepository,usersRepository);
+        verifyNoMoreInteractions(productRepository, usersRepository);
         verifyNoInteractions(cartItemRepository);
     }
 
     @Test
-    void removeItem_CartNotFound(){
-        Product product1 = product(1L, "iphone 15","iphone 15",BigDecimal.valueOf(1300),true,20);
+    @DisplayName("Verify removeItem returns false when cart item is not found")
+    void removeItem_CartNotFound() {
+        Product product1 = product(1L, "iphone 15", "iphone 15", BigDecimal.valueOf(1300), true, 20);
         Users user1 = createUser(
                 id, "Jane", "Smith", "jane@example.com", "1234567890", UserRole.CUSTOMER,
                 createAddress(10L, "221B Baker St", "London", "Greater London", "UK", "NW1")
         );
         when(productRepository.findById(id)).thenReturn(Optional.of(product1));
         when(usersRepository.findById(id)).thenReturn(Optional.of(user1));
-        when(cartItemRepository.findByUsersAndProduct(user1,product1)).thenReturn(Optional.empty());
+        when(cartItemRepository.findByUsersAndProduct(user1, product1)).thenReturn(Optional.empty());
 
-        Boolean response = cartItemService.removeItem(String.valueOf(id),id);
+        Boolean response = cartItemService.removeItem(String.valueOf(id), id);
 
         assertThat(response).isFalse();
 
         verify(productRepository).findById(id);
         verify(usersRepository).findById(id);
-        verify(cartItemRepository).findByUsersAndProduct(user1,product1);
-        verifyNoMoreInteractions(productRepository,usersRepository,cartItemRepository);
+        verify(cartItemRepository).findByUsersAndProduct(user1, product1);
+        verifyNoMoreInteractions(productRepository, usersRepository, cartItemRepository);
     }
 
     @Test
-    void removeItem_CartExist_Success(){
-        Product product1 = product(1L, "iphone 15","iphone 15",BigDecimal.valueOf(1300),true,20);
+    @DisplayName("Verify removeItem deletes cart item successfully")
+    void removeItem_CartExist_Success() {
+        Product product1 = product(1L, "iphone 15", "iphone 15", BigDecimal.valueOf(1300), true, 20);
         Users user1 = createUser(
                 id, "Jane", "Smith", "jane@example.com", "1234567890", UserRole.CUSTOMER,
                 createAddress(10L, "221B Baker St", "London", "Greater London", "UK", "NW1")
         );
-        CartItem cartItem1 = createCartItem(id,user1,product1,5, BigDecimal.valueOf(6500));
+        CartItem cartItem1 = createCartItem(id, user1, product1, 5, BigDecimal.valueOf(6500));
         when(productRepository.findById(id)).thenReturn(Optional.of(product1));
         when(usersRepository.findById(id)).thenReturn(Optional.of(user1));
-        when(cartItemRepository.findByUsersAndProduct(user1,product1)).thenReturn(Optional.of(cartItem1));
+        when(cartItemRepository.findByUsersAndProduct(user1, product1)).thenReturn(Optional.of(cartItem1));
 
-        Boolean response = cartItemService.removeItem(String.valueOf(id),id);
+        Boolean response = cartItemService.removeItem(String.valueOf(id), id);
 
         assertThat(response).isTrue();
 
         verify(productRepository).findById(id);
         verify(usersRepository).findById(id);
-        verify(cartItemRepository).findByUsersAndProduct(user1,product1);
+        verify(cartItemRepository).findByUsersAndProduct(user1, product1);
         verify(cartItemRepository).delete(any(CartItem.class));
-        verifyNoMoreInteractions(productRepository,usersRepository,cartItemRepository);
+        verifyNoMoreInteractions(productRepository, usersRepository, cartItemRepository);
     }
 
     @Test
-    void getCartItems_UserNotFound(){
+    @DisplayName("Verify getCartItems throws exception when user is not found")
+    void getCartItems_UserNotFound() {
         when(usersRepository.findById(id)).thenReturn(Optional.empty());
-        assertThatThrownBy(()-> cartItemService.getCartItems(String.valueOf(id)))
+
+        assertThatThrownBy(() -> cartItemService.getCartItems(String.valueOf(id)))
                 .isInstanceOf(ResourceNotFound.class)
                 .hasMessageContaining("User does not exist with id: " + id);
+
         verify(usersRepository).findById(id);
         verifyNoMoreInteractions(usersRepository);
-        verifyNoInteractions(cartItemRepository,cartMapper);
+        verifyNoInteractions(cartItemRepository, cartMapper);
     }
 
     @Test
-    void getCartItems_Success(){
+    @DisplayName("Verify getCartItems returns cart items successfully")
+    void getCartItems_Success() {
         Users user1 = createUser(
                 id, "Jane", "Smith", "jane@example.com", "1234567890", UserRole.CUSTOMER,
                 createAddress(10L, "221B Baker St", "London", "Greater London", "UK", "NW1")
         );
-        Product product1 = product(1L, "iphone 15","iphone 15",BigDecimal.valueOf(1300),true,20);
-        CartResponse cartResponse = createCartResponse(String.valueOf(id),5,BigDecimal.valueOf(6500));
-        CartItem cartItem1 = createCartItem(id,user1,product1,5, BigDecimal.valueOf(6500));
+        Product product1 = product(1L, "iphone 15", "iphone 15", BigDecimal.valueOf(1300), true, 20);
+        CartResponse cartResponse = createCartResponse(String.valueOf(id), 5, BigDecimal.valueOf(6500));
+        CartItem cartItem1 = createCartItem(id, user1, product1, 5, BigDecimal.valueOf(6500));
         when(usersRepository.findById(id)).thenReturn(Optional.of(user1));
         when(cartItemRepository.findByUsersId(id)).thenReturn(List.of(cartItem1));
         when(cartMapper.toDto(cartItem1)).thenReturn(cartResponse);
 
         List<CartResponse> responses = cartItemService.getCartItems(String.valueOf(id));
-        assertThat(responses.getFirst().getProductId()).isEqualTo("1");
-        assertThat(responses.getFirst().getQuantity()).isEqualTo(5);
-        assertThat(responses.getFirst().getPrice()).isEqualByComparingTo("6500");
+
+        assertThat(responses.get(0).getProductId()).isEqualTo("1");
+        assertThat(responses.get(0).getQuantity()).isEqualTo(5);
+        assertThat(responses.get(0).getPrice()).isEqualByComparingTo("6500");
 
         verify(usersRepository).findById(id);
         verify(cartItemRepository).findByUsersId(id);
         verify(cartMapper).toDto(any(CartItem.class));
-        verifyNoMoreInteractions(usersRepository,cartItemRepository,cartMapper);
+        verifyNoMoreInteractions(usersRepository, cartItemRepository, cartMapper);
     }
 
-    private Product product(Long id, String name, String description, BigDecimal price, boolean active, Integer stock){
+    private Product product(Long id, String name, String description, BigDecimal price, boolean active, Integer stock) {
         Product product = new Product();
         product.setName(name);
         product.setId(id);
@@ -272,14 +292,14 @@ public class CartItemServiceImplTest {
         return product;
     }
 
-    private CartRequest createCartRequest(String productId, int quantity){
+    private CartRequest createCartRequest(String productId, int quantity) {
         CartRequest cartRequest = new CartRequest();
         cartRequest.setQuantity(quantity);
         cartRequest.setProductId(productId);
         return cartRequest;
     }
 
-    private CartResponse createCartResponse(String productId, Integer quantity, BigDecimal price){
+    private CartResponse createCartResponse(String productId, Integer quantity, BigDecimal price) {
         CartResponse cartResponse = new CartResponse();
         cartResponse.setProductId(productId);
         cartResponse.setQuantity(quantity);
@@ -288,7 +308,7 @@ public class CartItemServiceImplTest {
     }
 
     private Users createUser(Long id, String firstName, String lastName, String email,
-                             String phone, UserRole role, Address address){
+                             String phone, UserRole role, Address address) {
         Users user = new Users();
         user.setId(id);
         user.setFirstName(firstName);
@@ -300,8 +320,7 @@ public class CartItemServiceImplTest {
         return user;
     }
 
-    private Address createAddress(Long id, String street, String city, String state, String country, String zipcode){
-
+    private Address createAddress(Long id, String street, String city, String state, String country, String zipcode) {
         Address address = new Address();
         address.setId(id);
         address.setStreet(street);
@@ -310,10 +329,10 @@ public class CartItemServiceImplTest {
         address.setCountry(country);
         address.setZipcode(zipcode);
         return address;
-
     }
+
     private CartItem createCartItem(Long id, Users users, Product product, Integer quantity,
-                                    BigDecimal price){
+                                    BigDecimal price) {
         CartItem cartItem = new CartItem();
         cartItem.setId(id);
         cartItem.setUsers(users);
@@ -322,5 +341,4 @@ public class CartItemServiceImplTest {
         cartItem.setPrice(price);
         return cartItem;
     }
-
 }
